# rag-bot

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yaml  pyproject.toml
handbook_rag/: bootstrap.py  config.py
handbook_rag/api/: __main__.py  server.py
handbook_rag/embeddings/: pdf_embedder.py
handbook_rag/llm/: aliyun_llm.py  base.py  local_llm.py
handbook_rag/queue/: task_queue.py
web-app/: Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web-app/src/: App.tsx  env.d.ts
web-app/src/components/: Chat.tsx  ChatMessage.tsx  MessageInput.tsx
web-app/src/types/: chat.ts
web-app/src/utils/: api.ts
